sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value i
    for(k<-0 to getNombreValeurs()-(i+1)){
                                    ^