sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var switch:Boolean=true
   while (switch) {
    for(k<-0 to getNombreValeurs()-(i+1)){
      switch = false
      if (plusPetit(k+1,k)) {echange(k+1,k);switch=true}
        
   }
  }
 }

      
